--- a/app/src/main/res/xml/pref_general.xml
+++ b/app/src/main/res/xml/pref_general.xml
@@ -8,4 +8,13 @@
         android:defaultValue="@string/pref_location_default"
         android:inputType="text"
         android:singleLine="true" />
+
+    <ListPreference
+        android:title="@string/pref_units_label"
+        android:dialogTitle="@string/pref_units_label"
+        android:key="@string/pref_units_key"
+        android:defaultValue="@string/pref_units_default"
+        android:entries="@array/pref_unit_entry_keys"
+        android:entryValues="@array/pref_unit_entry_values" />
+
 </PreferenceScreen>
