--- a/app/src/main/res/layout/fragment_detailed.xml
+++ b/app/src/main/res/layout/fragment_detailed.xml
@@ -53,6 +53,7 @@
                 android:layout_width="0dp"
                 android:layout_weight="1"
                 android:layout_height="wrap_content"
+                android:gravity="center_horizontal"
                 android:orientation="vertical">
 
                 <ImageView xmlns:android="http://schemas.android.com/apk/res/android"
@@ -63,7 +64,7 @@
 
                 <TextView
                     android:id="@+id/detailed_forecast"
-                    android:layout_width="match_parent"
+                    android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     tools:text="Forecast" />
             </LinearLayout>
